--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>My Website</title>
+        <link rel="stylesheet" href="reset.css"/>
+        <link rel="stylesheet" href="style.css"/>
+    </head>
+    <body>
+        <div id="navbar">
+            <h1 class="title">MY SUPER DOOPER WEBSITE</h1>
+            <ul> 
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+        <div id="mainhero">
+            <h1 class="headline">THE MORE YOU KNOW</h1>
+        </div>
+        <div id="mainrbox">
+            <div class="rbox"></div>
+            <div class="rbox"></div>
+            <div class="rbox"></div>
+        </div>
+        <div class="twobox">
+            <div class="box"></div>
+            <div class="box"></div>
+        </div>
+        <div class="maintext">
+            <div class="comment">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="comment">
+                <img src="elephant.jpg">
+            </div>
+        </div>
+        <div class="footer"></div>
+    </body>
+</html>
